Change document_type to URN style.
