# docs/apigw/swagger.yaml
@@ -41,28 +41,6 @@ definitions:
     - document_type
     - identities
     type: object
-  apiv1.CredentialRequest:
-    properties:
-      authentic_source:
-        type: string
-      collect_id:
-        type: string
-      credential_type:
-        type: string
-      document_type:
-        type: string
-      identity:
-        $ref: '#/definitions/model.Identity'
-      jwk:
-        $ref: '#/definitions/apiv1_issuer.Jwk'
-    required:
-    - authentic_source
-    - collect_id
-    - credential_type
-    - document_type
-    - identity
-    - jwk
-    type: object
   apiv1.DeleteDocumentIdentityRequest:
     properties:
       authentic_source:
@@ -205,7 +183,7 @@ definitions:
   apiv1.NotificationReply:
     properties:
       data:
-        $ref: '#/definitions/model.QR'
+        $ref: '#/definitions/openid4vci.QR'
     type: object
   apiv1.NotificationRequest:
     properties:
@@ -401,7 +379,7 @@ definitions:
       meta:
         $ref: '#/definitions/model.MetaData'
       qr:
-        $ref: '#/definitions/model.QR'
+        $ref: '#/definitions/openid4vci.QR'
     required:
     - meta
     - qr
@@ -413,81 +391,129 @@ definitions:
     type: object
   model.Identity:
     properties:
+      age_birth_year:
+        type: integer
+      age_in_years:
+        type: integer
+      age_over_14:
+        type: string
+      age_over_16:
+        type: boolean
+      age_over_18:
+        type: boolean
+      age_over_21:
+        type: boolean
+      age_over_65:
+        type: boolean
       authentic_source_person_id:
         description: |-
           required: true
           example: 65636cbc-c03f-11ee-8dc4-67135cc9bd8a
         type: string
-      birth_city:
-        description: |-
-          required: false
-          example: Stockholm
-        type: string
-      birth_country:
-        description: |-
-          TODO(masv): full name or just country code?
-          required: false
-          example: sweden
-        type: string
       birth_date:
         description: |-
           required: true
-          example: 1970-01-01
+          example: 1970-01-01 TODO: Day, month, and year?
+        type: string
+      birth_family_name:
+        maxLength: 100
+        minLength: 1
+        type: string
+      birth_given_name:
+        maxLength: 100
+        minLength: 1
         type: string
       birth_place:
         description: |-
-          required: false
+          required: true
           example: Stockholm
+        maxLength: 100
+        minLength: 2
         type: string
-      birth_state:
+      document_number:
         description: |-
           required: false
-          example: Stockholm
+          example:
+        type: string
+      email_address:
+        description: |-
+          required: false
+          example: <email-address>
+        type: string
+      expiry_date:
+        description: |-
+          required: true
+          example: Date (and if possible time)
         type: string
       family_name:
         description: |-
           required: true
           example: Svensson
-        type: string
-      family_name_at_birth:
-        description: |-
-          required: false
-          example: Karlsson
-        type: string
-      gender:
-        description: |-
-          required: false
-          example: male
+        maxLength: 100
+        minLength: 1
         type: string
       given_name:
         description: |-
           required: true
           example: Magnus
+        maxLength: 100
+        minLength: 1
         type: string
-      given_name_at_birth:
+      issuance_date:
+        type: string
+      issuing_authority:
+        description: |-
+          required: true
+          example:
+        type: string
+      issuing_country:
+        description: |-
+          required: true
+          example:
+        type: string
+      issuing_jurisdiction:
         description: |-
           required: false
-          example: Magnus
+          example:
+        type: string
+      mobile_phone_number:
+        description: |-
+          required: false
+          example: <+mobile-phone-number>
         type: string
       nationality:
         description: |-
+          required: true
+          example: SE
+        items:
+          type: string
+        type: array
+      personal_administrative_number:
+        description: |-
           required: false
-          example: swedish
+          example: <personnummer>
+        maxLength: 50
+        minLength: 4
+        type: string
+      picture:
+        description: |-
+          required: false
+          example: facial image compliant with ISO 19794-5 or ISO 39794 specifications
         type: string
       resident_address:
         description: |-
           required: false
-          example: 221b baker street
+          example: 221b Baker street
         type: string
       resident_city:
         description: |-
           required: false
-          example: london
+          example: London
         type: string
       resident_country:
         description: |-
           required: false
-          example: england
+          example: England
         type: string
       resident_house_number:
         description: |-
@@ -504,14 +530,37 @@ definitions:
           required: false
           example: england
         type: string
-      resident_street:
+      resident_street_address:
         description: |-
           required: false
-          example: baker street
+          example: Baker street
+        maxLength: 100
+        minLength: 1
         type: string
       schema:
         $ref: '#/definitions/model.IdentitySchema'
+      sex:
+        description: |-
+          required: false
+          example: 0 = not known, 1 = male, 2 = female, ...
+        enum:
+        - "0"
+        - "1"
+        - "2"
+        - "3"
+        - "4"
+        - "5"
+        - "6"
+        - "7"
+        - "8"
+        - "9"
+        type: string
+      trust_anchor:
+        type: string
     required:
+    - birth_date
+    - family_name
+    - given_name
     - schema
     type: object
   model.IdentitySchema:
@@ -566,8 +615,12 @@ definitions:
           required: true
           example: PDA1
         enum:
-        - PDA1
-        - EHIC
+        - urn:edui:elm:1
+        - urn:edui:diploma:1
+        - urn:edui:micro_credential:1
+        - urn:eu.europa.ec.eudi:pid:1
+        - urn:eudi:ehic:1
+        - urn:eudi:pda1:1
         type: string
       document_version:
         description: |-
@@ -589,19 +642,6 @@ definitions:
     - document_id
     - document_type
     - document_version
-    type: object
-  model.QR:
-    properties:
-      base64_image:
-        description: |-
-          required: true
-          example: "ZWFzdGVyIGVnZyE="
-        type: string
-      credential_offer:
-        description: 'required: true'
-        type: string
-    required:
-    - base64_image
     type: object
   model.Revocation:
     properties:
@@ -640,6 +680,107 @@ definitions:
       document_id:
         type: string
       document_type:
+        type: string
+    type: object
+  openid4vci.CredentialRequest:
+    properties:
+      credential_identifier:
+        description: REQUIRED when credential_identifiers parameter was returned from
+          the Token Response. It MUST NOT be used otherwise. It is a String that identifies
+          a Credential that is being requested to be issued. When this parameter is
+          used, the format parameter and any other Credential format specific parameters
+          such as those defined in Appendix A MUST NOT be present.
+        type: string
+      credential_response_encryption:
+        allOf:
+        - $ref: '#/definitions/openid4vci.CredentialResponseEncryption'
+        description: CredentialIdentifier REQUIRED when credential_identifiers parameter
+          was returned from the Token Response. It MUST NOT be used otherwise. It
+          is a String that identifies a Credential that is being requested to be issued.
+          When this parameter is used, the format parameter and any other Credential
+          format specific parameters such as those defined in Appendix A MUST NOT
+          be present.
+      format:
+        description: Format REQUIRED when the credential_identifiers parameter was
+          not returned from the Token Response. It MUST NOT be used otherwise. It
+          is a String that determines the format of the Credential to be issued, which
+          may determine the type and any other information related to the Credential
+          to be issued. Credential Format Profiles consist of the Credential format
+          specific parameters that are defined in Appendix A. When this parameter
+          is used, the credential_identifier Credential Request parameter MUST NOT
+          be present.
+        type: string
+      proof:
+        allOf:
+        - $ref: '#/definitions/openid4vci.Proof'
+        description: 'Proof OPTIONAL. Object containing the proof of possession of
+          the cryptographic key material the issued Credential would be bound to.
+          The proof object is REQUIRED if the proof_types_supported parameter is non-empty
+          and present in the credential_configurations_supported parameter of the
+          Issuer metadata for the requested Credential. The proof object MUST contain
+          the following:'
+    type: object
+  openid4vci.CredentialResponseEncryption:
+    properties:
+      alg:
+        type: string
+      enc:
+        type: string
+      jwk:
+        $ref: '#/definitions/openid4vci.JWK'
+    required:
+    - alg
+    - enc
+    - jwk
+    type: object
+  openid4vci.JWK:
+    properties:
+      crv:
+        type: string
+      d:
+        type: string
+      kid:
+        type: string
+      kty:
+        type: string
+      x:
+        type: string
+      "y":
+        type: string
+    required:
+    - crv
+    - d
+    - kid
+    - kty
+    - x
+    - "y"
+    type: object
+  openid4vci.Proof:
+    properties:
+      attestation:
+        type: string
+      jwt:
+        type: string
+      ldp_vp:
+        type: string
+      proof_type:
+        description: ProofType REQUIRED. String denoting the key proof type. The value
+          of this parameter determines other parameters in the key proof object and
+          its respective processing rules. Key proof types defined in this specification
+          can be found in Section 7.2.1.
+        enum:
+        - jwt
+        - ldp_vp
+        - cwt
+        type: string
+    required:
+    - proof_type
+    type: object
+  openid4vci.QR:
+    properties:
+      credential_offer_url:
+        type: string
+      qr_base64:
         type: string
     type: object
 info:
@@ -711,7 +852,7 @@ paths:
         name: req
         required: true
         schema:
-          $ref: '#/definitions/apiv1.CredentialRequest'
+          $ref: '#/definitions/openid4vci.CredentialRequest'
       produces:
       - application/json
       responses:
@@ -723,7 +864,7 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/helpers.ErrorResponse'
-      summary: Credential
+      summary: OIDCCredential
       tags:
       - dc4eu
   /credential/.well-known/jwks:
