# internal/apigw/apiv1/handlers_datastore.go
@@ -57,24 +57,6 @@ func (c *Client) Upload(ctx context.Context, req *UploadRequest) error {
 		}
 	}
 
-	//var credentialConfigurationID string
-	//switch req.Meta.DocumentType {
-	//case "PDA1":
-	//	credentialConfigurationID = "PDA1Credential"
-	//case "EHIC":
-	//	credentialConfigurationID = "EHICCredential"
-	//case "Diploma":
-	//	credentialConfigurationID = "DiplomaCredential"
-	//case "MicroCredential":
-	//	credentialConfigurationID = "MicroCredential"
-	//case "ELM":
-	//	credentialConfigurationID = "ELMCredential"
-	//case "PID":
-	//	credentialConfigurationID = "PIDCredential"
-	//default:
-	//	return fmt.Errorf("unsupported document type %s", req.Meta.DocumentType)
-	//}
-
 	credentialOfferParameter := openid4vci.CredentialOfferParameters{
 		CredentialIssuer: c.cfg.Issuer.IssuerURL,
 		CredentialConfigurationIDs: []string{
