# pkg/model/credential_types.go
@@ -1,7 +1,10 @@
 package model
 
 const (
-	CredentialTypeUrnEudiEhic1          = "urn:eudi:ehic:1"
-	CredentialTypeUrnEudiPda11          = "urn:eudi:pda1:1"
-	CredentialTypeUrnEuEuropaEcEudiPid1 = "urn:eu.europa.ec.eudi:pid:1"
+	CredentialTypeUrnEudiEhic1            = "urn:eudi:ehic:1"
+	CredentialTypeUrnEudiPda11            = "urn:eudi:pda1:1"
+	CredentialTypeUrnEuEuropaEcEudiPid1   = "urn:eu.europa.ec.eudi:pid:1"
+	CredentialTypeUrnEduiDiploma1         = "urn:edui:diploma:1"
+	CredentialTypeUrnEduiElm1             = "urn:edui:elm:1"
+	CredentialTypeUrnEduiMicroCredential1 = "urn:edui:micro_credential:1"
 )
